--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     },
     "dependencies": {
         "@faker-js/faker": "~/8.0.1",
+        "@hapi/boom": "9.1.4",
+        "body-parser": "~/1.20.2",
+        "cors": "~/2.8.5",
         "express": "~/4.18.2",
-        "faker": "5.5.3"
+        "faker": "5.5.3",
+        "joi": "~/17.9.2"
     }
 }
