--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "author": "Alejandro Sarmiento",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon index.js",
-        "start": "node index.js",
+        "dev": "nodemon api/index.js",
+        "start": "node api/index.js",
         "lint": "eslint"
     },
     "devDependencies": {
